fix: address SonarCloud quality gate issues - deprecated methods, constructor parameters, stream API, and string literals